// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) await_process 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "description": {
      "description": "Clear, concise description of why this process is being awaited",
      "type": "string",
    },
    "poll_interval_ms": {
      "description": "How often to check process status. Defaults to 250ms and is clamped to a safe range.",
      "type": "number",
    },
    "process_id": {
      "description": "The running process_id returned by the bash tool when yield_time_ms elapsed",
      "type": "string",
    },
    "timeout_ms": {
      "description": "Maximum time to wait for the process to reach a terminal state, capped by this turn's engineering controls.",
      "type": "number",
    },
  },
  "required": [
    "process_id",
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "description": {
      "description": 
"Clear, concise description of what this command does in 5-10 words. Examples:
Input: ls
Output: Lists files in current directory

Input: git status
Output: Shows working tree status

Input: npm install
Output: Installs package dependencies

Input: mkdir foo
Output: Creates directory 'foo'"
,
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
    "yield_time_ms": {
      "description": "Optional foreground wait in milliseconds before returning a still-running process_id. Defaults to 10000ms and is clamped to 250-30000ms.",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
  },
  "required": [
    "command",
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) cleanup_processes 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "description": {
      "description": "Clear, concise description of why these background processes are being cleaned.",
      "type": "string",
    },
    "environment_id": {
      "description": "Optional environment id filter.",
      "type": "string",
    },
    "include_finished": {
      "description": "When false, do not clean already-finished process records. Defaults to true.",
      "type": "boolean",
    },
    "include_running": {
      "description": "When true, terminate still-running processes selected by the filters before marking them cleaned.",
      "type": "boolean",
    },
    "process_id": {
      "description": "One process_id to clean up. Omit to clean by filters.",
      "type": "string",
    },
    "process_ids": {
      "description": "Multiple process_id values to clean up.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "statuses": {
      "description": "Optional process statuses to clean. Defaults to all finished statuses unless include_running is true.",
      "items": {
        "enum": [
          "running",
          "completed",
          "failed",
          "timeout",
          "aborted",
        ],
        "type": "string",
      },
      "type": "array",
    },
    "turn_id": {
      "description": "Optional turn id filter. Defaults to the current turn when available.",
      "type": "string",
    },
  },
  "required": [
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "oldString": {
      "description": "The text to replace",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "followSymlinks": {
      "description": "Follow symlinks while searching. Defaults to false.",
      "type": "boolean",
    },
    "ignore": {
      "description": "Additional glob patterns to exclude from the result set.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "maxResults": {
      "description": "Maximum number of results to return. Defaults to 100 and is capped at 10000.",
      "type": "number",
    },
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
    "protectedPolicy": {
      "description": "How protected metadata paths such as .git, .agents, and .codex are handled. Defaults to hide.",
      "enum": [
        "hide",
        "show_refused",
      ],
      "type": "string",
    },
    "showHidden": {
      "description": "Whether hidden dotfiles are included. Defaults to true for backwards compatibility.",
      "type": "boolean",
    },
    "timeoutMs": {
      "description": "Optional ripgrep timeout in milliseconds.",
      "type": "number",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextLines": {
      "description": "Number of surrounding context lines to show around each match. Defaults to 0.",
      "type": "number",
    },
    "followSymlinks": {
      "description": "Follow symlinks while searching. Defaults to false.",
      "type": "boolean",
    },
    "ignore": {
      "description": "Additional glob patterns to exclude from the search.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "maxLineChars": {
      "description": "Maximum characters shown for each matched line. Defaults to 2000.",
      "type": "number",
    },
    "maxMatches": {
      "description": "Maximum number of matches to return. Defaults to 100 and is capped at 10000.",
      "type": "number",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
    "protectedPolicy": {
      "description": "How protected metadata paths such as .git, .agents, and .codex are handled. Defaults to hide.",
      "enum": [
        "hide",
        "show_refused",
      ],
      "type": "string",
    },
    "showHidden": {
      "description": "Whether hidden dotfiles are included. Defaults to true for backwards compatibility.",
      "type": "boolean",
    },
    "timeoutMs": {
      "description": "Optional ripgrep timeout in milliseconds.",
      "type": "number",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "recursiveDepth": {
      "description": "When reading a directory, recursively include child directories up to this depth. Defaults to 0.",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "showHidden": {
      "description": "When reading a directory, include hidden dot entries. Defaults to true.",
      "type": "boolean",
    },
    "sort": {
      "description": "When reading a directory, sort entries by name or by type then name. Defaults to name.",
      "enum": [
        "name",
        "type_name",
      ],
      "type": "string",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes.",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "anyOf": [
        {
          "default": "markdown",
          "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
          "enum": [
            "text",
            "markdown",
            "html",
          ],
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "dryRun": {
      "description": "Preview the write and return mutation metadata without changing the file. Defaults to false.",
      "type": "boolean",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
    "overwrite": {
      "description": "Overwrite policy. allow permits create or replace, deny refuses existing files, if_absent only creates missing files.",
      "enum": [
        "allow",
        "deny",
        "if_absent",
      ],
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write_stdin 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "append_newline": {
      "description": "When true and control is text or omitted, append a newline after text.",
      "type": "boolean",
    },
    "control": {
      "description": "Optional controlled stdin action. text writes text, newline appends Enter, ctrl-c interrupts, eof closes stdin.",
      "enum": [
        "text",
        "newline",
        "ctrl-c",
        "eof",
      ],
      "type": "string",
    },
    "description": {
      "description": "Clear, concise description of why stdin is being written",
      "type": "string",
    },
    "process_id": {
      "description": "The running process_id returned by the bash tool when yield_time_ms elapsed",
      "type": "string",
    },
    "text": {
      "description": "Text to write to stdin. Use append_newline or control=newline when the process is waiting for Enter.",
      "type": "string",
    },
  },
  "required": [
    "process_id",
    "description",
  ],
  "type": "object",
}
`;
